# DB-GUIvolution

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: pylint.yml
.run/: Backend.run.xml  FastAPI.run.xml  start frontend.run.xml
backend/: .env.example  Dockerfile  database.py  database_endpoint.py  main.py  pyproject.toml
backend/api/: __init__.py  database_endpoint.py  nlp_endpoints.py
backend/core/: __init__.py  config.py
backend/database/: __init__.py  example_model.py  injector.py  queries.py
backend/database/init/: 01_db_structure.sql  02_db_popuation.sql
backend/gpt/: __init__.py  flavor_queries.py  gpt_service.py
backend/models/: __init__.py  request_models.py  response_models.py  where_node_model.py
backend/scripts/: lint.sh
backend/tests/: test_gpt_service.py
documentation/: stageI.md  types of SQL queries and categories.md
frontend/: Dockerfile  biome.json  package-lock.json  package.json
frontend/src/: App.css  App.js  NodePanel.js  ResultTable.css  ResultTable.js  appHelperFunctions.js  chatbot.css  chatbot.js  index.css  index.js  sidebar.css  sidebar.js  styles.css  tourSteps.js
frontend/src/components/: Dnd.js  Shapes.js
frontend/src/nodes/: FromNode.css  FromNode.js  GroupNode.js  SelectNode.css  SelectNode.js  TableSelectionContext.js  WhereNode.css  WhereNode.js
