[tool.poetry]
name = "csc-490"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
psycopg2-binary = "^2.9.7"
fastapi-cors = "^0.0.6"
pydantic = "^2.3.0"
pytest = "^7.0"
openai = "^0.27.0"
python-dotenv = "^0.19"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.292"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.ruff]
exclude = [".git","__pycache__",".mypy_cache",".pytest_cache", "__init__.py"]
line-length = 120

[tool.ruff.flake8-quotes]
inline-quotes = 'single'